--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <!-- Manicure Featured Image Card -->
                     <div class="col-lg-6">
                         <div class="position-relative overflow-hidden rounded-4 h-100 serviceImage">
-                            <img src="images/manicure2.JPG" alt="Basic Manicure" class="w-100 h-100 object-fit-cover">
+                            <img src="images/manicure.jpg" alt="Basic Manicure" class="w-100 h-100 object-fit-cover">
                         </div>
                     </div>
                     
