Add locations dropdown to navbar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
                         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="locationDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Locations</a>
+                            <ul class="dropdown-menu" aria-labelledby="locationDropdown">
+                                <li><a class="dropdown-item" href="index.html">Cape Girardeau</a></li>
+                                <li><a class="dropdown-item" href="https://poshnailsperryville.com">Perryville</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
