--- a/cape.html
+++ b/cape.html
@@ -8,7 +8,6 @@
             <!-- CSS Files -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Pacifico&family=Ruge+Boogie&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -33,8 +32,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="locationDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Locations</a>
                             <ul class="dropdown-menu" aria-labelledby="locationDropdown">
-                                <li><a class="dropdown-item" href="index.html">Cape Girardeau</a></li>
-                                <li><a class="dropdown-item" href="https://poshnailsperryville.com">Perryville</a></li>
+                                <li><a class="dropdown-item" href="#">Cape Girardeau</a></li>
+                                <li><a class="dropdown-item" target="_blank" href="https://poshnailsperryville.com">Perryville</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -46,8 +45,8 @@
         <section id="home" class="hero-section" >
             <div class="container" style="padding-top: 100px;">
                 <div class="hero-content text-center">
-                    <h1 class="display-3 fw-bold mb-4 animate__animated animate__fadeInUp">Welcome to POSH Nail</h1>
-                    <p class="lead mb-4 animate__animated animate__fadeInUp">Luxury nail care like never before</p>
+                    <h1 class="display-3 animate__animated animate__fadeInUp">Luxury nail care like never before</h1>
+                    <!-- <p class="lead mb-4 animate__animated animate__fadeInUp">Luxury nail care like never before</p> -->
                     <div class="animate__animated animate__fadeInUp delay-2s d-flex flex-wrap justify-content-center">
                         <a href="#services" class="btn btn-fancy me-3 mb-2">
                             Explore Services
@@ -357,7 +356,6 @@
 
          <!-- Bootstrap JS -->
          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- AOS JS -->
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script src="design.js"></script>
